Solve the flex calc overflow
$ flex calc working as intended.

--- a/style.css
+++ b/style.css
@@ -9,5 +9,4 @@
 .square {
     border: 1px solid lightgray;
     display: flex;
-    flex: 1 1 calc(100% / 16);
 }
